infra/navidrome/navidrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      nodeSelector:
        kubernetes.io/hostname: cuno
      containers:
        - name: navidrome
          image: deluan/navidrome:0.58.5
          ports:
            - containerPort: 4533
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /ping
              port: 4533
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 4533
            initialDelaySeconds: 15
            periodSeconds: 30
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music/
              subPath: projects/10042e7c-84c1-47ae-8244-36b33d47b184
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-data
        - name: music
          nfs:
            server: dolores.home
            path: /revachol-pool/k8s-data/main/pvc-a2248f1d-c3a0-4d9a-89f1-e0d42103f27d
            readOnly: true
