infra/navidrome/navidrome-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
spec:
  ports:
    - name: http
      port: 4533
      targetPort: 4533
  selector:
    app: navidrome
