infra/navidrome/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
  namespace: navidrome
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "navidrome.monederobox.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: navidrome
          port: 4533
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: navidrome-streaming
  namespace: navidrome
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: navidrome
  timeout:
    http:
      requestTimeout: "0s"
      connectionIdleTimeout: "1h"
